[package]
name = "nullsec-crypt-win"
version = "1.0.0"
edition = "2021"
authors = ["bad-antics <@AnonAntics>"]
description = "NullSec Windows File Encryptor - Ransomware simulation for testing"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "nullsec-crypt"
path = "src/main.rs"
